<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <EditTextPreference
        android:key="username"
        android:summary="@string/summaryUsername"
        android:title="@string/titleUsername" />
    <EditTextPreference
        android:key="password"
        android:summary="@string/summaryPassword"
        android:title="@string/titlePassword" />
    <EditTextPreference
        android:key="apiRoot"
        android:summary="@string/summaryApiRoot"
        android:title="@string/titleApiRoot" />
    <EditTextPreference
        android:defaultValue="140"
        android:key="maxCharactersPerMessage"
        android:summary="@string/maxCharactersPerLineSummaryUserPref"
        android:title="@string/maxCharactersPerLineTitleUserPref" />
    <EditTextPreference
        android:defaultValue="50"
        android:key="charactersPerMessageShownTimeline"
        android:summary="@string/charactersPerMessageShownSummaryTimeline"
        android:title="@string/charactersPerMessageShownTimelineTitleUserPrefs" />
        <EditTextPreference 
        android:defaultValue="Nd9Zqz1Xq3sXiXzIaZDRg"
        android:key="consumerKey" 
        android:title="@string/TitleConsumerKey" 
        android:summary="@string/SummaryConsumerKey"/>
    <EditTextPreference 
        android:defaultValue="KDdhZz3l4uZLHvRfZjn4GOBtS35gKKCajDYCLcbg5hQ"
        android:key="consumerSecret" 
        android:title="@string/TitleConsumerSecret" 
        android:summary="@string/SummaryConsumerSecret"/>
    <EditTextPreference 
        android:defaultValue="19740161-cdQDKvmcLwtyJI8UI0GkK2iDQ3Tgu5VB1vOaIaETT"
        android:key="accessToken" 
        android:title="@string/TitleAccessToken" 
        android:summary="@string/SummaryAccessToken"/>
    <EditTextPreference 
        android:defaultValue="qqBUBc9wOPm5ndVYTNvGlk9xaR1M58vecuM1uPswYAs"
        android:title="@string/TitleAccessTokenSecret" 
        android:summary="@string/SummaryAccessTokenSecret" 
        android:key="accessTokenSecret"/>

</PreferenceScreen>